--- a/payment.html
+++ b/payment.html
@@ -7,14 +7,14 @@
             font-family: Arial;
             text-align: center;
             background: #b5afaf;
-            padding: 40px;
+            padding: 20px;
         }
         .box {
             background: rgb(225, 216, 216);
-            width: 70%;
+            width: 90%;
             margin: auto;
-            padding: 40px;
-            border-radius: 10px;
+            padding: px;
+            border-radius: 5px;
         }
         img {
             width: 200px;
@@ -25,7 +25,7 @@
             margin-top: 20px;
         }
         button {
-            padding: 12px 25px;
+            padding: 20px 25px;
             background: black;
             color: white;
             border: none;
