--- a/payment.html
+++ b/payment.html
@@ -7,11 +7,11 @@
             font-family: Arial;
             text-align: center;
             background: #b5afaf;
-            padding: 20px;
+            padding: 5px;
         }
         .box {
             background: rgb(225, 216, 216);
-            width: 90%;
+            width: %;
             margin: auto;
             padding: px;
             border-radius: 5px;
@@ -79,3 +79,4 @@ function openForm() {
 
 </body>
 </html>
+
