Refactor index.html for improved layout and styling
Fixed HTML structure and adjusted styles.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
             font-family: Arial;
             text-align: center;
             background: #b9b0b0;
-            padding-top: 200px;
+            padding-top: 5px;
         }
         .box {
             background: rgb(226, 222, 222);
-            width: 70%;
+            width: %;
             margin: auto;
             padding: 70px;
             border-radius: 10px;
@@ -49,4 +49,5 @@ function goToWork() {
 
 </body>
 </html>
+
 
