Fix HTML structure and update padding in styles

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
             font-family: Arial;
             text-align: center;
             background: #b9b0b0;
-            padding-top: 5px;
+            padding-top: px;
         }
         .box {
             background: rgb(226, 222, 222);
             width: %;
             margin: auto;
-            padding: 70px;
+            padding: 150px;
             border-radius: 10px;
         }
         button {
@@ -49,5 +49,6 @@ function goToWork() {
 
 </body>
 </html>
+
 
 
