Fix HTML structure and update padding

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             font-family: Arial;
             text-align: center;
             background: #b9b0b0;
-            padding-top: px;
+            padding-top: 300px;
         }
         .box {
             background: rgb(226, 222, 222);
@@ -49,6 +49,7 @@ function goToWork() {
 
 </body>
 </html>
+
 
 
 
